--- a/MD Notebook - SharedArray Benchmarking.ipynb
+++ b/MD Notebook - SharedArray Benchmarking.ipynb
@@ -52,43 +52,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This program is using 4 threads\n",
-      "This program is using 4 processes\n",
-      "This program is using 3 workers\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Use multiple processes / workers\n",
-    "# Optimal number will depend on machine\n",
-    "\n",
-    "println(\"This program is using \", Threads.nthreads(), \" threads\")\n",
-    "\n",
-    "desired_num_procs = 4\n",
-    "curr_num_procs = nprocs()\n",
-    "\n",
-    "if (curr_num_procs < desired_num_procs) # Use four processes\n",
-    "    addprocs(desired_num_procs - curr_num_procs)\n",
-    "end\n",
-    "println(\"This program is using \", nprocs(), \" processes\")\n",
-    "println(\"This program is using \", nworkers(), \" workers\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "gen_interaction (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -137,12 +106,12 @@
     "const interaction_params = gen_interaction(num_part_types); # Interations parameters for types of particles\n",
     "const mass_parts = rand(Float64, num_part_types); # Masses of types of particles\n",
     "const save_interval = 10; # How often save position\n",
-    "const save_data = false; # Whether to save data to file so can restart"
+    "const save_data = false; # For benchmarking, don't save data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +120,7 @@
        "initialize (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +157,7 @@
        "step_update (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +170,10 @@
     "    \n",
     "    # Outer loop in parallel\n",
     "    @sync @parallel for i = 1:part_num # For every particle\n",
+    "    #for i = 1:part_num # For every particle\n",
     "        mass = mass_parts[part_types[i]]\n",
     "        @parallel for j = 1:dim # For each dimension\n",
+    "        #for j = 1:dim # For each dimension\n",
     "            pos[i,j] = pos[i,j] + vel[i,j]*dt + 0.5*acc[i,j]*dt^2 # x(t+Δt) = x(t) + v(t)Δt + 1/2*a(t)(Δt)^2\n",
     "            vel[i,j] = vel[i,j] + 0.5*(acc[i,j] + force[i,j]/mass)*dt # v(t+Δt) = v(t) + 1/2*(a(t)+a(t+Δt))Δt\n",
     "            acc[i,j] = force[i,j]/mass # a = F/m\n",
@@ -233,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +213,7 @@
        "find_force (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,6 +232,7 @@
     "    \n",
     "    # Outer loop in parallel\n",
     "    @sync @parallel for i = 1:part_num # For every particle\n",
+    "    #for i = 1:part_num # For every particle\n",
     "        mass = mass_parts[part_types[i]]\n",
     "        for k = 1:part_num # Contribution from every other particle\n",
     "            if (i != k) # No self-interaction\n",
@@ -303,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +284,7 @@
        "write_output (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,116 +309,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "main (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Main - where program executes\n",
     "# Convert to main(args) if convert to script\n",
+    "# This is the part of the program that is timed\n",
     "\n",
-    "# Set up matrices to save positions, velocities, and accelerations into\n",
-    "num_pos = floor(Int, number_of_steps/save_interval)+1 # Number of positions to save\n",
-    "saved_positions = zeros(num_pos, part_num, dim) # Save positions with specified frequency\n",
-    "if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
-    "    saved_velocities = zeros(num_pos, part_num, dim) # Save velocities with specified frequency\n",
-    "    saved_accelerations = zeros(num_pos, part_num, dim) # Save accelerations with specified frequency\n",
-    "    saved_forces = zeros(num_pos, part_num, dim) # Save forces with specified frequency\n",
-    "end\n",
-    "save_index = 1 # Keep track of index so can save positions with specified frequency\n",
-    "\n",
-    "pos, vel, acc, part_types = initialize(part_num, dim, box_size, num_part_types) # Initialize\n",
-    "force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
-    "saved_positions[save_index,:,:] = pos # Save position\n",
-    "if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
-    "    saved_velocities[save_index,:,:] = vel # Save velocity\n",
-    "    saved_accelerations[save_index,:,:] = acc # Save accelerations\n",
-    "    saved_forces[save_index,:,:] = force # Save forces\n",
-    "end\n",
-    "save_index += 1 # Increment index\n",
-    "\n",
-    "for i = 1:number_of_steps\n",
-    "    pos, vel, acc = step_update(part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic) # Update\n",
-    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find new forces\n",
+    "function main()\n",
     "    \n",
-    "    if (i % save_interval == 0) # If are saving this time step\n",
-    "        saved_positions[save_index,:,:] = pos # Save position\n",
-    "        if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
-    "            saved_velocities[save_index,:,:] = vel # Save velocity\n",
-    "            saved_accelerations[save_index,:,:] = acc # Save accelerations\n",
-    "            saved_forces[save_index,:,:] = force # Save forces\n",
-    "        end\n",
-    "        save_index += 1 # Increment index\n",
+    "    # Set up matrices to save positions, velocities, and accelerations into\n",
+    "    num_pos = floor(Int, number_of_steps/save_interval)+1 # Number of positions to save\n",
+    "    saved_positions = zeros(num_pos, part_num, dim) # Save positions with specified frequency\n",
+    "    if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
+    "        saved_velocities = zeros(num_pos, part_num, dim) # Save velocities with specified frequency\n",
+    "        saved_accelerations = zeros(num_pos, part_num, dim) # Save accelerations with specified frequency\n",
+    "        saved_forces = zeros(num_pos, part_num, dim) # Save forces with specified frequency\n",
     "    end\n",
-    "end\n",
+    "    save_index = 1 # Keep track of index so can save positions with specified frequency\n",
     "\n",
-    "if (save_data) # If save data\n",
-    "    write_output(part_num, dim, part_types, interaction_params, mass_parts, dt, saved_positions, saved_velocities, saved_accelerations, saved_forces)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Pkg.add(\"Plots\")\n",
-    "using Plots\n",
-    "plotly()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot saved positions interactively\n",
-    "# NOTE: Interact does not work in Windows\n",
+    "    pos, vel, acc, part_types = initialize(part_num, dim, box_size, num_part_types) # Initialize\n",
+    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
+    "    saved_positions[save_index,:,:] = pos # Save position\n",
+    "    if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
+    "        saved_velocities[save_index,:,:] = vel # Save velocity\n",
+    "        saved_accelerations[save_index,:,:] = acc # Save accelerations\n",
+    "        saved_forces[save_index,:,:] = force # Save forces\n",
+    "    end\n",
+    "    save_index += 1 # Increment index\n",
     "\n",
-    "#Pkg.add(\"Interact\")\n",
-    "using Interact\n",
+    "    for i = 1:number_of_steps\n",
+    "        pos, vel, acc = step_update(part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic) # Update\n",
+    "        force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find new forces\n",
     "\n",
-    "# Print as scatter plot in 2D or 3D\n",
-    "@manipulate for index=1:num_pos\n",
-    "    if (dim == 2) # 2D\n",
-    "        plot(saved_positions[index,:,1],saved_positions[index,:,2], seriestype=:scatter)\n",
-    "    elseif (dim == 3) # 3D\n",
-    "        plot(saved_positions[index,:,1],saved_positions[index,:,2],saved_positions[index,:,3], seriestype=:scatter)\n",
-    "    end    \n",
+    "        if (i % save_interval == 0) # If are saving this time step\n",
+    "            saved_positions[save_index,:,:] = pos # Save position\n",
+    "            if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
+    "                saved_velocities[save_index,:,:] = vel # Save velocity\n",
+    "                saved_accelerations[save_index,:,:] = acc # Save accelerations\n",
+    "                saved_forces[save_index,:,:] = force # Save forces\n",
+    "            end\n",
+    "            save_index += 1 # Increment index\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    # Don't save data in benchmarking version\n",
+    "    #=if (save_data) # If save data\n",
+    "        write_output(part_num, dim, part_types, interaction_params, mass_parts, dt, saved_positions, saved_velocities, saved_accelerations, saved_forces)\n",
+    "    end=#\n",
+    "    \n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Plot starting position\n",
-    "index = 1\n",
-    "if (dim == 2) # 2D\n",
-    "        plot(saved_positions[index,:,1],saved_positions[index,:,2], seriestype=:scatter)\n",
-    "elseif (dim == 3) # 3D\n",
-    "    plot(saved_positions[index,:,1],saved_positions[index,:,2],saved_positions[index,:,3], seriestype=:scatter)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot last position\n",
-    "index = num_pos   \n",
-    "if (dim == 2) # 2D\n",
-    "        plot(saved_positions[index,:,1],saved_positions[index,:,2], seriestype=:scatter)\n",
-    "elseif (dim == 3) # 3D\n",
-    "    plot(saved_positions[index,:,1],saved_positions[index,:,2],saved_positions[index,:,3], seriestype=:scatter)\n",
-    "end"
+    "using BenchmarkTools"
    ]
   },
   {
@@ -456,7 +391,112 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "println(\"This program is using \", Threads.nthreads(), \" threads\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This program is using 1 processes\n",
+      "This program is using 1 workers\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  10.33 GiB\n",
+       "  allocs estimate:  395974015\n",
+       "  --------------\n",
+       "  minimum time:     62.031 s (5.34% GC)\n",
+       "  median time:      62.031 s (5.34% GC)\n",
+       "  mean time:        62.031 s (5.34% GC)\n",
+       "  maximum time:     62.031 s (5.34% GC)\n",
+       "  --------------\n",
+       "  samples:          1\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use multiple processes / workers\n",
+    "# Optimal number will depend on machine\n",
+    "\n",
+    "desired_num_procs = 1 # Try with just 1\n",
+    "curr_num_procs = nprocs()\n",
+    "\n",
+    "if (curr_num_procs < desired_num_procs) # Use four processes\n",
+    "    addprocs(desired_num_procs - curr_num_procs)\n",
+    "end\n",
+    "println(\"This program is using \", nprocs(), \" processes\")\n",
+    "println(\"This program is using \", nworkers(), \" workers\")\n",
+    "\n",
+    "@benchmark main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This program is using 4 processes\n",
+      "This program is using 3 workers\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use multiple processes / workers\n",
+    "# Optimal number will depend on machine\n",
+    "\n",
+    "desired_num_procs = 4 # Try with 4\n",
+    "curr_num_procs = nprocs()\n",
+    "\n",
+    "if (curr_num_procs < desired_num_procs) # Use four processes\n",
+    "    addprocs(desired_num_procs - curr_num_procs)\n",
+    "end\n",
+    "println(\"This program is using \", nprocs(), \" processes\")\n",
+    "println(\"This program is using \", nworkers(), \" workers\")\n",
+    "\n",
+    "@benchmark main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Use multiple processes / workers\n",
+    "# Optimal number will depend on machine\n",
+    "\n",
+    "desired_num_procs = 10 # Try with 10\n",
+    "curr_num_procs = nprocs()\n",
+    "\n",
+    "if (curr_num_procs < desired_num_procs) # Use four processes\n",
+    "    addprocs(desired_num_procs - curr_num_procs)\n",
+    "end\n",
+    "println(\"This program is using \", nprocs(), \" processes\")\n",
+    "println(\"This program is using \", nworkers(), \" workers\")\n",
+    "\n",
+    "@benchmark main()"
+   ]
   }
  ],
  "metadata": {
