--- a/MD Notebook - Serial Benchmarking.ipynb
+++ b/MD Notebook - Serial Benchmarking.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "gen_interaction (generic function with 1 method)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,18 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefining constant interaction_params\n",
-      "WARNING: redefining constant mass_parts\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Global constants \n",
     "# If convert to script, some should be user inputs\n",
@@ -138,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +138,7 @@
        "initialize (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +172,7 @@
        "step_update (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +226,7 @@
        "find_force (generic function with 1 method)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +293,7 @@
        "write_output (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +327,7 @@
        "main (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,18 +384,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mPrecompiling module BenchmarkTools.\n",
+      "\u001b[39m"
+     ]
+    }
+   ],
    "source": [
     "using BenchmarkTools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -414,16 +412,16 @@
        "  memory estimate:  27.09 MiB\n",
        "  allocs estimate:  23502\n",
        "  --------------\n",
-       "  minimum time:     2.677 s (0.09% GC)\n",
-       "  median time:      2.695 s (0.09% GC)\n",
-       "  mean time:        2.695 s (0.09% GC)\n",
-       "  maximum time:     2.714 s (0.10% GC)\n",
+       "  minimum time:     2.639 s (0.09% GC)\n",
+       "  median time:      2.674 s (0.09% GC)\n",
+       "  mean time:        2.674 s (0.09% GC)\n",
+       "  maximum time:     2.710 s (0.09% GC)\n",
        "  --------------\n",
        "  samples:          2\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,15 +429,6 @@
    "source": [
     "@benchmark main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
