--- a/MD Notebook - Serial Benchmarking.ipynb
+++ b/MD Notebook - Serial Benchmarking.ipynb
@@ -267,7 +267,7 @@
     "        end\n",
     "    end\n",
     "    \n",
-    "    return pos, vel, acc\n",
+    "    # return pos, vel, acc # No need to return b/c is passed by reference\n",
     "end"
    ]
   },
@@ -400,19 +400,8 @@
     "function main(number_of_steps, part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic, interaction_params)\n",
     "\n",
     "    for i = 1:number_of_steps\n",
-    "        pos, vel, acc = step_update(part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic) # Update\n",
+    "        step_update(part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic) # Update\n",
     "        force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find new forces\n",
-    "\n",
-    "        # Don't save data in benchmarking version\n",
-    "        #=if (i % save_interval == 0) # If are saving this time step\n",
-    "            saved_positions[save_index,:,:] = pos # Save position\n",
-    "            if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
-    "                saved_velocities[save_index,:,:] = vel # Save velocity\n",
-    "                saved_accelerations[save_index,:,:] = acc # Save accelerations\n",
-    "                saved_forces[save_index,:,:] = force # Save forces\n",
-    "            end\n",
-    "            save_index += 1 # Increment index\n",
-    "        end=#\n",
     "    end\n",
     "    \n",
     "end"
@@ -421,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using BenchmarkTools"
@@ -429,43 +420,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  24.72 MiB\n",
-       "  allocs estimate:  20000\n",
+       "  memory estimate:  24.41 MiB\n",
+       "  allocs estimate:  10000\n",
        "  --------------\n",
-       "  minimum time:     2.768 s (0.09% GC)\n",
-       "  median time:      2.864 s (0.09% GC)\n",
-       "  mean time:        2.864 s (0.09% GC)\n",
-       "  maximum time:     2.960 s (0.09% GC)\n",
+       "  minimum time:     3.028 s (0.09% GC)\n",
+       "  median time:      3.048 s (0.11% GC)\n",
+       "  mean time:        3.048 s (0.11% GC)\n",
+       "  maximum time:     3.068 s (0.13% GC)\n",
        "  --------------\n",
        "  samples:          2\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Set up matrices to save positions, velocities, and accelerations into\n",
-    "# Unnecessary in benchmarking code\n",
-    "#=num_pos = floor(Int, number_of_steps/save_interval)+1 # Number of positions to save\n",
-    "saved_positions = zeros(num_pos, part_num, dim) # Save positions with specified frequency\n",
-    "if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
-    "    saved_velocities = zeros(num_pos, part_num, dim) # Save velocities with specified frequency\n",
-    "    saved_accelerations = zeros(num_pos, part_num, dim) # Save accelerations with specified frequency\n",
-    "    saved_forces = zeros(num_pos, part_num, dim) # Save forces with specified frequency\n",
-    "end\n",
-    "save_index = 1 # Keep track of index so can save positions with specified frequency=#\n",
-    "\n",
-    "\n",
     "# Initialization\n",
     "pos, vel, acc, part_types = initialize(part_num, dim, box_size, num_part_types, data_from_file) # Initialize\n",
     "if (data_from_file)\n",
@@ -474,24 +453,9 @@
     "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
     "end\n",
     "\n",
-    "# Unnecessary in benchmarking code\n",
-    "#=saved_positions[save_index,:,:] = pos # Save position\n",
-    "if (save_data) # Only save vel, acc, and force if plan on saving to file\n",
-    "    saved_velocities[save_index,:,:] = vel # Save velocity\n",
-    "    saved_accelerations[save_index,:,:] = acc # Save accelerations\n",
-    "    saved_forces[save_index,:,:] = force # Save forces\n",
-    "end\n",
-    "save_index += 1 # Increment index=#\n",
-    "\n",
-    "\n",
     "# Benchmarking\n",
     "\n",
-    "@benchmark main(number_of_steps, part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic, interaction_params)\n",
-    "\n",
-    "# Don't save data in benchmarking version\n",
-    "#=if (save_data) # If save data\n",
-    "    write_output(number_of_steps, dim, box_size, finite_box, periodic, part_num, dt, num_part_types, interaction_params, mass_parts, save_interval, part_types, saved_positions, saved_velocities, saved_accelerations, saved_forces) \n",
-    "end=#"
+    "@benchmark main(number_of_steps, part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic, interaction_params)"
    ]
   }
  ],
