--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,22 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4.5+(-.5) % 4.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.0"
+       "my_f (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "4.5+(-.5) % 4.5"
+    "function my_f(A)\n",
+    "    for i =1:10\n",
+    "        A[i] += 1\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Float64,1}:\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0\n",
+       " 2.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = zeros(10)\n",
+    "my_f(A)\n",
+    "B = copy(A)\n",
+    "my_f(A)\n",
+    "C= copy(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(C)"
    ]
   },
   {
