New form of SharedArray
Implementing two uses of SharedArrays: one w/ @parallel and one with chunks

--- a/MD Notebook - Serial Benchmarking.ipynb
+++ b/MD Notebook - Serial Benchmarking.ipynb
@@ -291,7 +291,7 @@
     "# Find force on each particle\n",
     "# 1/r^2 interactions: Is very simple but user can replace with anything they want\n",
     "\n",
-    "function find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts)\n",
+    "function find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size)\n",
     "    \n",
     "    force = zeros(part_num, dim)\n",
     "    \n",
@@ -401,7 +401,7 @@
     "\n",
     "    for i = 1:number_of_steps\n",
     "        step_update(part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic) # Update\n",
-    "        force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find new forces\n",
+    "        force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size) # Find new forces\n",
     "    end\n",
     "    \n",
     "end"
@@ -430,10 +430,10 @@
        "  memory estimate:  24.41 MiB\n",
        "  allocs estimate:  10000\n",
        "  --------------\n",
-       "  minimum time:     3.028 s (0.09% GC)\n",
-       "  median time:      3.048 s (0.11% GC)\n",
-       "  mean time:        3.048 s (0.11% GC)\n",
-       "  maximum time:     3.068 s (0.13% GC)\n",
+       "  minimum time:     3.714 s (0.09% GC)\n",
+       "  median time:      4.195 s (0.08% GC)\n",
+       "  mean time:        4.195 s (0.08% GC)\n",
+       "  maximum time:     4.676 s (0.07% GC)\n",
        "  --------------\n",
        "  samples:          2\n",
        "  evals/sample:     1"
@@ -450,7 +450,7 @@
     "if (data_from_file)\n",
     "    force = readdlm(\"saved_forces.txt\")\n",
     "else\n",
-    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
+    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size) # Find forces on particles\n",
     "end\n",
     "\n",
     "# Benchmarking\n",
