--- a/MD Notebook - SharedArray Benchmarking.ipynb
+++ b/MD Notebook - SharedArray Benchmarking.ipynb
@@ -288,7 +288,7 @@
     "# Find force on each particle\n",
     "# 1/r^2 interactions: Is very simple but user can replace with anything they want\n",
     "\n",
-    "function find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts)\n",
+    "function find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size)\n",
     "    \n",
     "    #force = zeros(part_num, dim)\n",
     "    #force = convert(SharedArray,force)\n",
@@ -402,7 +402,7 @@
     "\n",
     "    for i = 1:number_of_steps\n",
     "        step_update(part_num, dim, pos, vel, acc, force, part_types, mass_parts, dt, box_size, finite_box, periodic) # Update\n",
-    "        force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find new forces\n",
+    "        force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size) # Find new forces\n",
     "    end\n",
     "    \n",
     "end"
@@ -453,13 +453,13 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  152.25 MiB\n",
-       "  allocs estimate:  3410744\n",
+       "  memory estimate:  148.77 MiB\n",
+       "  allocs estimate:  3292284\n",
        "  --------------\n",
-       "  minimum time:     9.664 s (0.75% GC)\n",
-       "  median time:      9.664 s (0.75% GC)\n",
-       "  mean time:        9.664 s (0.75% GC)\n",
-       "  maximum time:     9.664 s (0.75% GC)\n",
+       "  minimum time:     10.984 s (0.78% GC)\n",
+       "  median time:      10.984 s (0.78% GC)\n",
+       "  mean time:        10.984 s (0.78% GC)\n",
+       "  maximum time:     10.984 s (0.78% GC)\n",
        "  --------------\n",
        "  samples:          1\n",
        "  evals/sample:     1"
@@ -488,7 +488,7 @@
     "if (data_from_file)\n",
     "    force = readdlm(\"saved_forces.txt\")\n",
     "else\n",
-    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
+    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size) # Find forces on particles\n",
     "end\n",
     "\n",
     "# Benchmarking\n",
@@ -527,7 +527,7 @@
     "if (data_from_file)\n",
     "    force = readdlm(\"saved_forces.txt\")\n",
     "else\n",
-    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
+    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size) # Find forces on particles\n",
     "end\n",
     "\n",
     "# Benchmarking\n",
@@ -557,7 +557,7 @@
     "if (data_from_file)\n",
     "    force = readdlm(\"saved_forces.txt\")\n",
     "else\n",
-    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts) # Find forces on particles\n",
+    "    force = find_force(part_num, dim, pos, vel, acc, part_types, interaction_params, mass_parts, periodic, box_size) # Find forces on particles\n",
     "end\n",
     "\n",
     "# Benchmarking\n",
