--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -103,6 +103,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "procs()\n",
+       "```\n",
+       "\n",
+       "Returns a list of all process identifiers.\n"
+      ],
+      "text/plain": [
+       "```\n",
+       "procs()\n",
+       "```\n",
+       "\n",
+       "Returns a list of all process identifiers.\n"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@doc procs()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
