--- a/MD Notebook - SharedArray @parallel Benchmarking.ipynb
+++ b/MD Notebook - SharedArray @parallel Benchmarking.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "# Parallel molecular dyanmics simulation implementation in Julia\n",
     "\n",
-    "# SharedArray Version"
+    "# SharedArray Version - @parallel\n",
+    "\n",
+    "# Modified version for benchmarking (no saving outputs or plotting)"
    ]
   },
   {
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -507,6 +509,26 @@
       "This program is using 4 processes\n",
       "This program is using 3 workers\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  962.41 MiB\n",
+       "  allocs estimate:  22335831\n",
+       "  --------------\n",
+       "  minimum time:     29.234 s (0.54% GC)\n",
+       "  median time:      29.234 s (0.54% GC)\n",
+       "  mean time:        29.234 s (0.54% GC)\n",
+       "  maximum time:     29.234 s (0.54% GC)\n",
+       "  --------------\n",
+       "  samples:          1\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -536,9 +558,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This program is using 10 processes\n",
+      "This program is using 9 workers\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  3.02 GiB\n",
+       "  allocs estimate:  70321236\n",
+       "  --------------\n",
+       "  minimum time:     82.200 s (0.54% GC)\n",
+       "  median time:      82.200 s (0.54% GC)\n",
+       "  mean time:        82.200 s (0.54% GC)\n",
+       "  maximum time:     82.200 s (0.54% GC)\n",
+       "  --------------\n",
+       "  samples:          1\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use multiple processes / workers\n",
     "# Optimal number will depend on machine\n",
@@ -546,7 +597,7 @@
     "desired_num_procs = 10 # Try with 10\n",
     "curr_num_procs = nprocs()\n",
     "\n",
-    "if (curr_num_procs < desired_num_procs) # Use four processes\n",
+    "if (curr_num_procs < desired_num_procs) # Use 10 processes\n",
     "    addprocs(desired_num_procs - curr_num_procs)\n",
     "end\n",
     "println(\"This program is using \", nprocs(), \" processes\")\n",
