--- a/MD Notebook - SharedArray @parallel.ipynb
+++ b/MD Notebook - SharedArray @parallel.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# Parallel molecular dyanmics simulation implementation in Julia\n",
     "\n",
-    "# SharedArray Version"
+    "# SharedArray Version - @parallel"
    ]
   },
   {
