--- a/MD Notebook - Serial Benchmarking.ipynb
+++ b/MD Notebook - Serial Benchmarking.ipynb
@@ -86,8 +86,8 @@
    "source": [
     "# For benchmarking, data can't be saved to output file but can still be read in\n",
     "\n",
-    "const params_from_file = false; # Whether input parameters should be read from file\n",
-    "const data_from_file = false; # Whether starting data should be read from file\n",
+    "const params_from_file = true; # Whether input parameters should be read from file\n",
+    "const data_from_file = true; # Whether starting data should be read from file\n",
     "const save_data = false; # Whether to save data to file so can restart"
    ]
   },
@@ -164,7 +164,7 @@
     "else # Assign parameter values here\n",
     "    const number_of_steps = 10000; # Number of steps to execute in simulation\n",
     "    const dim = 3; # Dimensions of simulation\n",
-    "    const box_size = 10.0; # Size of one side of box\n",
+    "    const box_size = 100.0; # Size of one side of box\n",
     "    const finite_box = true; # Whether box if finite or just where particles are initially placed\n",
     "    const periodic = true; # Whether simulation is periodic\n",
     "    const part_num = 100; # Number of particles in simulation\n",
@@ -427,15 +427,15 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  24.41 MiB\n",
-       "  allocs estimate:  10000\n",
+       "  memory estimate:  22.96 MiB\n",
+       "  allocs estimate:  2000\n",
        "  --------------\n",
-       "  minimum time:     3.714 s (0.09% GC)\n",
-       "  median time:      4.195 s (0.08% GC)\n",
-       "  mean time:        4.195 s (0.08% GC)\n",
-       "  maximum time:     4.676 s (0.07% GC)\n",
+       "  minimum time:     26.660 s (0.01% GC)\n",
+       "  median time:      26.660 s (0.01% GC)\n",
+       "  mean time:        26.660 s (0.01% GC)\n",
+       "  maximum time:     26.660 s (0.01% GC)\n",
        "  --------------\n",
-       "  samples:          2\n",
+       "  samples:          1\n",
        "  evals/sample:     1"
       ]
      },
