--- a/MD Notebook - SharedArray @parallel Benchmarking.ipynb
+++ b/MD Notebook - SharedArray @parallel Benchmarking.ipynb
@@ -77,8 +77,8 @@
    },
    "outputs": [],
    "source": [
-    "const params_from_file = false; # Whether input parameters should be read from file\n",
-    "const data_from_file = false; # Whether starting data should be read from file\n",
+    "const params_from_file = true; # Whether input parameters should be read from file\n",
+    "const data_from_file = true; # Whether starting data should be read from file\n",
     "const save_data = false; # Whether to save data to file so can restart"
    ]
   },
@@ -155,7 +155,7 @@
     "else # Assign parameter values here\n",
     "    const number_of_steps = 10000; # Number of steps to execute in simulation\n",
     "    const dim = 3; # Dimensions of simulation\n",
-    "    const box_size = 10.0; # Size of one side of box\n",
+    "    const box_size = 100.0; # Size of one side of box\n",
     "    const finite_box = true; # Whether box if finite or just where particles are initially placed\n",
     "    const periodic = true; # Whether simulation is periodic\n",
     "    const part_num = 100; # Number of particles in simulation\n",
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This program is using 4 threads\n"
+      "This program is using 8 threads\n"
      ]
     }
    ],
@@ -455,13 +455,13 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  148.77 MiB\n",
-       "  allocs estimate:  3292284\n",
+       "  memory estimate:  13.69 MiB\n",
+       "  allocs estimate:  290997\n",
        "  --------------\n",
-       "  minimum time:     10.984 s (0.78% GC)\n",
-       "  median time:      10.984 s (0.78% GC)\n",
-       "  mean time:        10.984 s (0.78% GC)\n",
-       "  maximum time:     10.984 s (0.78% GC)\n",
+       "  minimum time:     77.180 s (0.00% GC)\n",
+       "  median time:      77.180 s (0.00% GC)\n",
+       "  mean time:        77.180 s (0.00% GC)\n",
+       "  maximum time:     77.180 s (0.00% GC)\n",
        "  --------------\n",
        "  samples:          1\n",
        "  evals/sample:     1"
@@ -514,13 +514,13 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  962.41 MiB\n",
-       "  allocs estimate:  22335831\n",
+       "  memory estimate:  137.31 MiB\n",
+       "  allocs estimate:  2255392\n",
        "  --------------\n",
-       "  minimum time:     29.234 s (0.54% GC)\n",
-       "  median time:      29.234 s (0.54% GC)\n",
-       "  mean time:        29.234 s (0.54% GC)\n",
-       "  maximum time:     29.234 s (0.54% GC)\n",
+       "  minimum time:     30.503 s (0.07% GC)\n",
+       "  median time:      30.503 s (0.07% GC)\n",
+       "  mean time:        30.503 s (0.07% GC)\n",
+       "  maximum time:     30.503 s (0.07% GC)\n",
        "  --------------\n",
        "  samples:          1\n",
        "  evals/sample:     1"
@@ -573,13 +573,13 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  3.02 GiB\n",
-       "  allocs estimate:  70321236\n",
+       "  memory estimate:  435.10 MiB\n",
+       "  allocs estimate:  7086138\n",
        "  --------------\n",
-       "  minimum time:     82.200 s (0.54% GC)\n",
-       "  median time:      82.200 s (0.54% GC)\n",
-       "  mean time:        82.200 s (0.54% GC)\n",
-       "  maximum time:     82.200 s (0.54% GC)\n",
+       "  minimum time:     31.788 s (0.19% GC)\n",
+       "  median time:      31.788 s (0.19% GC)\n",
+       "  mean time:        31.788 s (0.19% GC)\n",
+       "  maximum time:     31.788 s (0.19% GC)\n",
        "  --------------\n",
        "  samples:          1\n",
        "  evals/sample:     1"
