--- a/MD Notebook - Threads Benchmarking.ipynb
+++ b/MD Notebook - Threads Benchmarking.ipynb
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This program is using 4 threads\n"
+      "This program is using 8 threads\n"
      ]
     }
    ],
@@ -95,9 +95,9 @@
    },
    "outputs": [],
    "source": [
-    "const params_from_file = false; # Whether input parameters should be read from file\n",
-    "const data_from_file = false; # Whether starting data should be read from file\n",
-    "const save_data = true; # Whether to save data to file so can restart"
+    "const params_from_file = true; # Whether input parameters should be read from file\n",
+    "const data_from_file = true; # Whether starting data should be read from file\n",
+    "const save_data = false; # Whether to save data to file so can restart"
    ]
   },
   {
@@ -171,7 +171,7 @@
     "    const mass_parts = readdlm(\"mass_parts.txt\"); # Masses of types of particles\n",
     "    const save_interval = Int(readdlm(\"save_interval.txt\")[1]); # How often save position\n",
     "else # Assign parameter values here\n",
-    "    const number_of_steps = 10000; # Number of steps to execute in simulation\n",
+    "    const number_of_steps = 1000; # Number of steps to execute in simulation\n",
     "    const dim = 3; # Dimensions of simulation\n",
     "    const box_size = 10.0; # Size of one side of box\n",
     "    const finite_box = true; # Whether box if finite or just where particles are initially placed\n",
@@ -436,15 +436,15 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  26.40 MiB\n",
-       "  allocs estimate:  30000\n",
+       "  memory estimate:  23.16 MiB\n",
+       "  allocs estimate:  4000\n",
        "  --------------\n",
-       "  minimum time:     2.472 s (0.13% GC)\n",
-       "  median time:      2.551 s (0.14% GC)\n",
-       "  mean time:        2.551 s (0.14% GC)\n",
-       "  maximum time:     2.629 s (0.15% GC)\n",
+       "  minimum time:     6.501 s (0.04% GC)\n",
+       "  median time:      6.501 s (0.04% GC)\n",
+       "  mean time:        6.501 s (0.04% GC)\n",
+       "  maximum time:     6.501 s (0.04% GC)\n",
        "  --------------\n",
-       "  samples:          2\n",
+       "  samples:          1\n",
        "  evals/sample:     1"
       ]
      },
