--- a/MD Notebook - SharedArray @parallel Benchmarking.ipynb
+++ b/MD Notebook - SharedArray @parallel Benchmarking.ipynb
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This program is using 8 threads\n"
+      "This program is using 1 threads\n"
      ]
     }
    ],
@@ -455,15 +455,15 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  13.69 MiB\n",
-       "  allocs estimate:  290997\n",
+       "  memory estimate:  13.67 MiB\n",
+       "  allocs estimate:  287424\n",
        "  --------------\n",
-       "  minimum time:     77.180 s (0.00% GC)\n",
-       "  median time:      77.180 s (0.00% GC)\n",
-       "  mean time:        77.180 s (0.00% GC)\n",
-       "  maximum time:     77.180 s (0.00% GC)\n",
+       "  minimum time:     911.230 ms (1.11% GC)\n",
+       "  median time:      925.121 ms (1.10% GC)\n",
+       "  mean time:        928.528 ms (0.87% GC)\n",
+       "  maximum time:     947.402 ms (1.83% GC)\n",
        "  --------------\n",
-       "  samples:          1\n",
+       "  samples:          6\n",
        "  evals/sample:     1"
       ]
      },
@@ -514,15 +514,15 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  137.31 MiB\n",
-       "  allocs estimate:  2255392\n",
+       "  memory estimate:  95.66 MiB\n",
+       "  allocs estimate:  2223108\n",
        "  --------------\n",
-       "  minimum time:     30.503 s (0.07% GC)\n",
-       "  median time:      30.503 s (0.07% GC)\n",
-       "  mean time:        30.503 s (0.07% GC)\n",
-       "  maximum time:     30.503 s (0.07% GC)\n",
+       "  minimum time:     2.559 s (0.55% GC)\n",
+       "  median time:      2.624 s (0.51% GC)\n",
+       "  mean time:        2.624 s (0.51% GC)\n",
+       "  maximum time:     2.689 s (0.47% GC)\n",
        "  --------------\n",
-       "  samples:          1\n",
+       "  samples:          2\n",
        "  evals/sample:     1"
       ]
      },
@@ -573,13 +573,13 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  435.10 MiB\n",
-       "  allocs estimate:  7086138\n",
+       "  memory estimate:  310.04 MiB\n",
+       "  allocs estimate:  7037955\n",
        "  --------------\n",
-       "  minimum time:     31.788 s (0.19% GC)\n",
-       "  median time:      31.788 s (0.19% GC)\n",
-       "  mean time:        31.788 s (0.19% GC)\n",
-       "  maximum time:     31.788 s (0.19% GC)\n",
+       "  minimum time:     7.993 s (0.53% GC)\n",
+       "  median time:      7.993 s (0.53% GC)\n",
+       "  mean time:        7.993 s (0.53% GC)\n",
+       "  maximum time:     7.993 s (0.53% GC)\n",
        "  --------------\n",
        "  samples:          1\n",
        "  evals/sample:     1"
